Fix overflow, README, and bump version

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ button,
 
 pre {
     white-space: pre-wrap;
+    overflow-y: scroll;
 }
 
 .textbox {
